done q3 and q4